[package]
name = "invizible-pro-windows"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A network security software similar to InviZible Pro for Windows"

[dependencies]
# GUI
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"
rfd = "0.11.0"

# Network & Security
tokio = { version = "1.28.0", features = ["full"] }
tor-rtcompat = "0.4.5"
arti-client = "0.8.6"
arti-hyper = "0.8.6"
dnscrypt-proxy = "0.1.0"
i2p = "0.0.2"

# Firewall
windows-firewall = "0.3.0"
winapi = { version = "0.3.9", features = ["winnt", "winsock2", "ws2def"] }

# Logging
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"

# Utilities
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0.70"
once_cell = "1.17.1"
port_scanner = "0.1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true