[package]
name = "invizible-pro-windows"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A network security software similar to InviZible Pro for Windows"

[dependencies]
# GUI
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"
rfd = "0.11.0"

# Network & Security
tokio = { version = "1.28.0", features = ["full"] }
tor-rtcompat = "0.29.0"
i2p_client = "0.2.9"

# VPN & Proxy
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
base64 = "0.21.0"
url = "2.3.1"
yaml-rust = "0.4.5"
serde_yaml = "0.9.21"
proxies = "0.2.1"
shadowsocks-rust = "1.23.0"
trojan_rust = "0.1.0"

# Firewall
windows_firewall = "0.1.0"
winapi = { version = "0.3.9", features = ["winnt", "winsock2", "ws2def", "winuser", "securitybaseapi"] }
scopeguard = "1.2.0"

# Logging
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"

# Utilities
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0.70"
once_cell = "1.17.1"
port_scanner = "0.1.5"
dirs = "5.0.1"
arboard = "3.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true